--- a/src/components/AboutMe/AboutMe.module.scss
+++ b/src/components/AboutMe/AboutMe.module.scss
@@ -1,8 +1,8 @@
-@import '../../styles/settings.scss';
+@use '../../styles/settings.scss' as settings;
 
 .about_me {
   padding: 250px 0 300px;
-  background-color: $color-background-lighter;
+  background-color: settings.$color-background-lighter;
 
   .wrapper {
     display: flex;
@@ -23,7 +23,7 @@
           left: 0;
           right: 0;
           bottom: 0;
-          background-color: $color-primary;
+          background-color: settings.$color-primary;
           opacity: 0.5;
           border-radius: 20px;
         }
@@ -38,13 +38,13 @@
 
       h3 {
         font-size: 2.5rem;
-        font-weight: $font-weight-bold;
-        color: $color-text-primary;
+        font-weight: settings.$font-weight-bold;
+        color: settings.$color-text-primary;
         margin-bottom: 20px;
       }
 
       p {
-        color: $color-text-dark;
+        color: settings.$color-text-dark;
         margin-bottom: 20px;
       }
     }
