--- a/src/components/Action/Action.module.scss
+++ b/src/components/Action/Action.module.scss
@@ -1,11 +1,11 @@
-@import '../../styles/settings.scss';
+@use '../../styles/settings.scss' as settings;
 
 .action {
   display: flex;
   justify-content: space-between;
   margin-top: 50px;
   margin-bottom: -135px;
-  background-color: $color-background-primary;
+  background-color: settings.$color-background-primary;
   padding: 50px;
   position: relative;
 
@@ -29,16 +29,16 @@
 
     h3 {
       font-size: 1.2rem;
-      font-weight: $font-weight-bold;
-      color: $color-text-dark;
+      font-weight: settings.$font-weight-bold;
+      color: settings.$color-text-dark;
       text-transform: uppercase;
       margin-bottom: 1rem;
     }
 
     h4 {
       font-size: 1.7rem;
-      font-weight: $font-weight-bold;
-      color: $color-text-dark;
+      font-weight: settings.$font-weight-bold;
+      color: settings.$color-text-dark;
       margin-bottom: 1rem;
     }
   }
@@ -49,7 +49,7 @@
     justify-content: flex-end;
     z-index: 2;
     position: relative;
-    transition: $transition_0_3;
+    transition: settings.$transition_0_3;
     padding-left: 20px;
 
     &:hover {
@@ -61,14 +61,14 @@
 
       svg {
         font-size: 7rem;
-        color: $color-text-light;
+        color: settings.$color-text-light;
         margin-right: 1rem;
       }
 
       .text {
         font-size: 1.2rem;
-        font-weight: $font-weight-bold;
-        color: $color-text-dark;
+        font-weight: settings.$font-weight-bold;
+        color: settings.$color-text-dark;
         text-transform: uppercase;
       }
     }
