--- a/src/components/CustomButton/CustomButton.module.scss
+++ b/src/components/CustomButton/CustomButton.module.scss
@@ -1,52 +1,52 @@
-@import '../../styles/settings.scss';
+@use '../../styles/settings.scss' as settings;
 
 .button {
   border-radius: 5px;
-  border: 1px solid $color-background-primary;
+  border: 1px solid settings.$color-background-primary;
   font-size: 1rem;
   width: fit-content;
   text-transform: uppercase;
   padding: 10px 20px;
-  color: $color-text-light;
+  color: settings.$color-text-light;
   text-decoration: none;
   margin-left: 50%;
   transform: translateX(-50%);
 
   &:hover {
-    color: $color-text-primary;
-    border: 1px solid $color-text-primary;
+    color: settings.$color-text-primary;
+    border: 1px solid settings.$color-text-primary;
   }
 }
 
 .dark {
-  border: 1px solid $color-background-dark;
-  color: $color-text-dark;
+  border: 1px solid settings.$color-background-dark;
+  color: settings.$color-text-dark;
 
   &:hover {
-    background-color: $color-background-dark;
-    color: $color-text-primary;
+    background-color: settings.$color-background-dark;
+    color: settings.$color-text-primary;
   }
 }
 
 .white {
-  border: 1px solid $color-background-dark;
-  color: $color-text-dark;
+  border: 1px solid settings.$color-background-dark;
+  color: settings.$color-text-dark;
 
   &:hover {
-    border: 1px solid $color-text-primary;
-    color: $color-text-primary;
+    border: 1px solid settings.$color-text-primary;
+    color: settings.$color-text-primary;
   }
 }
 
 .price {
   font-size: 0.8rem;
   width: max-content;
-  color: $color-text-dark;
-  border-color: $color-background-dark;
+  color: settings.$color-text-dark;
+  border-color: settings.$color-background-dark;
 
   &:hover {
-    color: $color-text-primary;
-    border-color: $color-background-primary;
+    color: settings.$color-text-primary;
+    border-color: settings.$color-background-primary;
   }
 }
 
