--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,8 +1,8 @@
-@import '../../styles/settings.scss';
+@use '../../styles/settings.scss' as settings;
 
 .footer {
-  background-color: $color-background-dark;
-  color: $color-text-light;
+  background-color: settings.$color-background-dark;
+  color: settings.$color-text-light;
   padding: 50px 0 0;
   position: relative;
 
@@ -13,7 +13,7 @@
     left: 0;
     width: 100%;
     height: 1px;
-    background-color: $color-text-light;
+    background-color: settings.$color-text-light;
   }
 
   .container {
@@ -31,20 +31,20 @@
       margin-bottom: 30px;
 
       h3 {
-        color: $color-primary;
+        color: settings.$color-primary;
         font-size: 1.5rem;
       }
 
       a,
       p {
-        color: $color-text-light;
+        color: settings.$color-text-light;
         text-decoration: none;
         transition: color 0.3s;
         margin: 0;
         padding: 0;
       }
       a:hover {
-        color: $color-primary;
+        color: settings.$color-primary;
       }
 
       .first_column {
