--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/settings.scss';
+@use '../../styles/settings.scss' as settings;
 
 .scrolled {
   background: rgba(25, 29, 41, 0.65);
@@ -16,14 +16,14 @@
 
     & > a {
       margin-left: 10px;
-      color: $color-text-light;
-      font-weight: $font-weight-bold;
+      color: settings.$color-text-light;
+      font-weight: settings.$font-weight-bold;
       font-size: 0.9rem;
       text-decoration: none;
     }
 
     & > a.active {
-      color: $color-primary;
+      color: settings.$color-primary;
     }
   }
 }
