--- a/src/components/MyServices/MyServices.module.scss
+++ b/src/components/MyServices/MyServices.module.scss
@@ -1,7 +1,7 @@
-@import '../../styles/settings.scss';
+@use '../../styles/settings.scss' as settings;
 
 .myServices {
-  background-color: $color-background-dark;
+  background-color: settings.$color-background-dark;
   margin: 150px 0 0;
   padding: 100px 0 10px;
 
@@ -18,12 +18,12 @@
       left: 50%;
       transform: translateX(-50%);
       height: 1px;
-      background-color: $color-primary;
+      background-color: settings.$color-primary;
     }
 
     .icon {
       font-size: 2.5rem;
-      color: $color-primary;
+      color: settings.$color-primary;
       margin-right: 2rem;
     }
 
@@ -31,14 +31,14 @@
       flex: 70%;
       h3 {
         font-size: 1.2rem;
-        font-weight: $font-weight-extrabold;
-        color: $color-text-light;
+        font-weight: settings.$font-weight-extrabold;
+        color: settings.$color-text-light;
         text-transform: uppercase;
         margin-bottom: 1rem;
       }
 
       p {
-        color: $color-text-light;
+        color: settings.$color-text-light;
         margin-bottom: 2rem;
       }
     }
