--- a/src/components/MyServicesThumbs/MyServicesThumbs.module.scss
+++ b/src/components/MyServicesThumbs/MyServicesThumbs.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/settings.scss';
+@use '../../styles/settings.scss' as settings;
 
 .thums_container {
   display: flex;
@@ -16,13 +16,13 @@
   }
 
   button {
-    background-color: $color-background-light;
+    background-color: settings.$color-background-light;
     border: none;
     border-radius: 15px;
-    color: $color-text-dark;
+    color: settings.$color-text-dark;
     height: 100%;
     font-size: 1.1rem;
-    font-weight: $font-weight-bold;
+    font-weight: settings.$font-weight-bold;
     text-transform: uppercase;
     padding: 15px 20px;
   }
@@ -38,14 +38,14 @@
 
     h3 {
       font-size: 2rem;
-      font-weight: $font-weight-bold;
-      color: $color-primary;
+      font-weight: settings.$font-weight-bold;
+      color: settings.$color-primary;
       margin-bottom: 50px;
     }
 
     p {
       font-size: 1rem;
-      color: $color-text-light;
+      color: settings.$color-text-light;
       margin-bottom: 20px;
 
       &:last-of-type {
