--- a/src/components/ScroolUpButton/ScroolUpButton.module.scss
+++ b/src/components/ScroolUpButton/ScroolUpButton.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/settings.scss';
+@use '../../styles/settings.scss' as settings;
 
 .scroll_up_button {
   position: fixed;
@@ -11,11 +11,11 @@
   svg {
     width: 50px;
     height: 50px;
-    fill: $color-primary;
-    border: 1px solid $color-background-dark;
+    fill: settings.$color-primary;
+    border: 1px solid settings.$color-background-dark;
     border-radius: 50%;
-    background-color: $color-background-dark;
-    transition: $transition_0_3;
+    background-color: settings.$color-background-dark;
+    transition: settings.$transition_0_3;
 
     &:hover {
       transform: scale(1.1);
