--- a/src/components/SectionTitle/SectionTitle.module.scss
+++ b/src/components/SectionTitle/SectionTitle.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/settings.scss';
+@use '../../styles/settings.scss' as settings;
 
 .section_title {
   text-align: center;
@@ -6,26 +6,26 @@
 
   h2 {
     font-size: 2.5rem;
-    font-weight: $font-weight-extrabold;
-    color: $color-text-dark;
+    font-weight: settings.$font-weight-extrabold;
+    color: settings.$color-text-dark;
     text-transform: uppercase;
     margin-bottom: 1rem;
   }
 
   .color_primary {
-    color: $color-primary;
+    color: settings.$color-primary;
   }
 
   p {
-    color: $color-text-dark;
+    color: settings.$color-text-dark;
     margin-bottom: 1rem;
   }
 
   .white {
-    color: $color-text-light;
+    color: settings.$color-text-light;
 
     p {
-      color: $color-text-light;
+      color: settings.$color-text-light;
     }
   }
 }
