--- a/src/components/SiteInfo/SiteInfo.module.scss
+++ b/src/components/SiteInfo/SiteInfo.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/settings.scss';
+@use '../../styles/settings.scss' as settings;
 
 .site_info {
   .wrapper {
@@ -11,7 +11,7 @@
     .first_column {
       flex: 1;
       padding: 2rem;
-      background-color: $color-background-primary;
+      background-color: settings.$color-background-primary;
       border-radius: 20px 0 0 20px;
       display: flex;
       flex-direction: column;
@@ -19,14 +19,14 @@
       align-items: flex-start;
 
       h3 {
-        font-weight: $font-weight-bold;
+        font-weight: settings.$font-weight-bold;
       }
     }
 
     .second_column {
       flex: 1;
       padding: 2rem;
-      background-color: $color-background-lighter;
+      background-color: settings.$color-background-lighter;
       border-radius: 0 20px 20px 0;
       display: flex;
       flex-direction: column;
@@ -39,8 +39,8 @@
         text-align: right;
 
         a {
-          color: $color-text-primary;
-          font-weight: $font-weight-bold;
+          color: settings.$color-text-primary;
+          font-weight: settings.$font-weight-bold;
           text-decoration: none;
           transition: color 0.3s;
           text-transform: uppercase;
@@ -48,7 +48,7 @@
           letter-spacing: 2px;
 
           &:hover {
-            color: $color-primary;
+            color: settings.$color-primary;
           }
         }
       }
@@ -57,7 +57,7 @@
 
   .banner {
     margin-top: 100px;
-    background-color: $color-background-primary;
+    background-color: settings.$color-background-primary;
     padding: 2rem;
     border-radius: 20px;
     display: flex;
