--- a/src/components/Testiniomals/Testiniomals.module.scss
+++ b/src/components/Testiniomals/Testiniomals.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/settings.scss';
+@use '../../styles/settings.scss' as settings;
 
 .testiniomals {
   background-image: image-set(
@@ -24,15 +24,15 @@
     .testimonial {
       max-width: 600px;
       margin: 10px 0;
-      border-top: 2px solid $color-background-lighter;
+      border-top: 2px solid settings.$color-background-lighter;
 
       .testimonial_stars {
-        color: $color-primary;
+        color: settings.$color-primary;
         padding-top: 20px;
       }
 
       .testimonial_text {
-        color: $color-text-light;
+        color: settings.$color-text-light;
         margin: 20px 0;
 
         p:nth-child(2) {
@@ -40,7 +40,7 @@
         }
 
         a {
-          color: $color-primary;
+          color: settings.$color-primary;
           text-decoration: none;
           font-weight: 700;
         }
