--- a/src/components/Menu/MenuMobile.module.scss
+++ b/src/components/Menu/MenuMobile.module.scss
@@ -18,6 +18,15 @@
   display: flex;
   flex-direction: column;
 
+  svg {
+    font-size: 30px;
+  }
+
+  .menu_image {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
   .lang {
     display: flex;
     justify-content: flex-end !important;
