--- a/src/components/ProcessSteps/LogoProcessSteps.module.scss
+++ b/src/components/ProcessSteps/LogoProcessSteps.module.scss
@@ -224,6 +224,7 @@
       .step {
         margin: 50px 0;
         flex-direction: column-reverse;
+        padding: 0 20px;
 
         .step_content {
           text-align: center;
