--- a/src/components/ProcessSteps/ProcessSteps.module.scss
+++ b/src/components/ProcessSteps/ProcessSteps.module.scss
@@ -237,6 +237,7 @@
       .step {
         margin: 50px 0;
         flex-direction: column-reverse;
+        padding: 0 20px;
 
         .step_content {
           text-align: center;
