--- a/src/components/MultiStepForm/OrderSiteForm.module.scss
+++ b/src/components/MultiStepForm/OrderSiteForm.module.scss
@@ -1,7 +1,7 @@
 @use '../../styles/settings.scss' as settings;
 
 .order_site_form {
-  margin: 150px 0;
+  margin: 150px 0 300px;
   background-color: settings.$color-background-dark;
   padding: 100px 0;
 
