--- a/src/components/MultiStepForm/OrderSiteForm.module.scss
+++ b/src/components/MultiStepForm/OrderSiteForm.module.scss
@@ -26,23 +26,27 @@
       }
     }
 
-    .button {
-      border-radius: 5px;
-      border: 1px solid settings.$color-background-primary;
-      font-size: 0.9rem;
-      background-color: unset;
-      text-transform: uppercase;
-      padding: 8px 16px;
-      color: settings.$color-text-light;
-      text-decoration: none;
-      margin: 20px 50px 50px 0;
+    .button_wrapper {
+      display: flex;
+      gap: 20px;
 
-      &:hover {
-        color: settings.$color-text-primary;
-        border: 1px solid settings.$color-text-primary;
+      .button {
+        border-radius: 5px;
+        border: 1px solid settings.$color-background-primary;
+        font-size: 0.9rem;
+        background-color: unset;
+        text-transform: uppercase;
+        padding: 8px 16px;
+        color: settings.$color-text-light;
+        text-decoration: none;
+        margin: 20px 0 50px 0;
+
+        &:hover {
+          color: settings.$color-text-primary;
+          border: 1px solid settings.$color-text-primary;
+        }
       }
     }
-
     .dark {
       border: 1px solid settings.$color-background-dark;
       color: settings.$color-text-dark;
@@ -97,5 +101,11 @@
         margin-left: 10px;
       }
     }
+  }
+}
+
+@media (max-width: 768px) {
+  .order_site_form .form .button_wrapper {
+    justify-content: space-between;
   }
 }
