--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -51,6 +51,10 @@ em {
 @media (max-width: 768px) {
   html {
     font-size: 15px;
+
+    textarea {
+      font-size: 16px !important;
+    }
   }
 }
 
