--- a/src/components/MultiStepForm/OrderSiteForm.css
+++ b/src/components/MultiStepForm/OrderSiteForm.css
@@ -4,6 +4,19 @@
   width: 2.5em;
 }
 
+.site_form .form-check-label {
+  font-size: 15px !important;
+}
+
+.site_form .form-label {
+  font-size: 15px !important;
+  margin-bottom: 5px !important;
+}
+
+.site_form .form-check {
+  margin-bottom: 0.6rem;
+}
+
 .site_form .option {
   display: flex;
   align-items: center;
@@ -26,4 +39,31 @@
 .site_form .form-control:focus {
   border-color: #ffbf00 !important;
   box-shadow: 0 0 0 0.2rem rgba(255, 191, 0, 0.25) !important;
+}
+
+@media (max-width: 768px) {
+  .site_form .form-check-label {
+    flex: 93%;
+  }
+
+  .site_form .form-check-input {
+    height: 1.6em;
+    flex: 7%;
+  }
+
+  .site_form .form-check {
+    display: flex;
+    margin-bottom: 1rem;
+    align-items: center;
+  }
+}
+
+@media (max-width: 500px) {
+  .site_form .form-check-label {
+    flex: 90%;
+  }
+
+  .site_form .form-check-input {
+    flex: 10%;
+  }
 }
