--- a/src/components/MultiStepForm/OrderSiteForm.module.scss
+++ b/src/components/MultiStepForm/OrderSiteForm.module.scss
@@ -61,9 +61,10 @@
   .steps_count_display {
     display: flex;
     justify-content: center;
-    margin-bottom: 50px;
+    padding: 50px 0;
     color: settings.$color-text-light;
     gap: 20px;
+    position: relative;
 
     .step {
       font-size: 1.5rem;
@@ -76,12 +77,16 @@
       opacity: 1;
       transform: scale(1.5);
     }
+
+    .element_to_scroll {
+      position: absolute;
+      top: -50px;
+    }
   }
 
   .selection_display {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 50px;
     justify-content: center;
 
     .selection_display_item {
