--- a/src/components/ScroolToPriceButton/ScroolToPriceButton.module.scss
+++ b/src/components/ScroolToPriceButton/ScroolToPriceButton.module.scss
@@ -8,22 +8,6 @@
   background-color: unset;
   z-index: 1000;
 
-  &:hover::after {
-    content: 'przejdź do ceny';
-    position: absolute;
-    top: -10%;
-    left: -127%;
-    transform: translate(-50%, -50%);
-    font-size: 0.8rem;
-    color: settings.$color-primary;
-    background-color: settings.$color-background-light;
-    padding: 5px 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-    z-index: 1000;
-    transition: settings.$transition_0_3;
-  }
-
   svg {
     width: 50px;
     height: 50px;
@@ -39,6 +23,61 @@
   }
 }
 
+.scroll_to_price_button_active {
+  &::after {
+    content: 'Przejdź do ceny';
+    position: absolute;
+    word-wrap: break-word;
+    top: 65px;
+    right: -5px;
+    background-color: settings.$color-background-dark;
+    color: settings.$color-text-light;
+    padding: 7px 13px;
+    border-radius: 5px;
+    font-size: 0.7rem;
+    left: -5px;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 57px;
+    right: 19px;
+    width: 0;
+    height: 0;
+    border: 8px solid transparent;
+    border-top-color: settings.$color-background-dark;
+    transform: rotate(45deg);
+  }
+}
+
+.scroll_to_price_button_left:hover {
+  &::after {
+    content: 'Przejdź do ceny';
+    position: absolute;
+    top: 0px;
+    background-color: settings.$color-background-dark;
+    color: settings.$color-text-light;
+    padding: 7px 13px;
+    border-radius: 5px;
+    font-size: 0.7rem;
+    left: -120px;
+    white-space: nowrap;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 18px;
+    right: 63px;
+    width: 0;
+    height: 0;
+    border: 9px solid transparent;
+    border-top-color: settings.$color-background-dark;
+    transform: rotate(45deg);
+  }
+}
+
 @media (max-width: 768px) {
   .scroll_to_price_button {
     bottom: 60px;
@@ -47,6 +86,30 @@
     svg {
       width: 40px;
       height: 40px;
+    }
+  }
+
+  .scroll_to_price_button_active {
+    &::after {
+      top: 53px;
+      right: 5px;
+      left: -35px;
+    }
+
+    &::before {
+      top: 46px;
+      border: 7px solid transparent;
+      border-top-color: settings.$color-background-dark;
+    }
+  }
+
+  .scroll_to_price_button_left:hover {
+    &::after {
+      content: none;
+    }
+
+    &::before {
+      content: none;
     }
   }
 }
