dodanie landingpage oraz practicles

--- a/src/components/Action/Action.module.scss
+++ b/src/components/Action/Action.module.scss
@@ -82,6 +82,7 @@
 .action2 {
   background-color: settings.$color-background-dark;
   padding: 80px 0;
+  position: relative;
 
   .wrapper {
     display: flex;
