--- a/src/components/LandingPages/LP_MyServicesAccordion/LP_MyServicesAccordion.module.scss
+++ b/src/components/LandingPages/LP_MyServicesAccordion/LP_MyServicesAccordion.module.scss
@@ -1,4 +1,4 @@
-@use '../../styles/settings.scss' as settings;
+@use '../../../styles/settings.scss' as settings;
 
 .wrapper {
   margin-top: 100px;
