--- a/src/components/LandingPages/LP_MyServicesThumbs/LP_MyServicesThumbs.module.scss
+++ b/src/components/LandingPages/LP_MyServicesThumbs/LP_MyServicesThumbs.module.scss
@@ -1,4 +1,4 @@
-@use '../../styles/settings.scss' as settings;
+@use '../../../styles/settings.scss' as settings;
 
 .thums_container {
   display: flex;
