--- a/src/components/Sections/HomePage/MyServiceComponents/MyServices/MyServices.module.scss
+++ b/src/components/Sections/HomePage/MyServiceComponents/MyServices/MyServices.module.scss
@@ -22,7 +22,8 @@
     }
 
     .icon {
-      font-size: 2.5rem;
+      width: 70px;
+      height: 70px;
       color: settings.$color-primary;
       margin-right: 2rem;
     }
