--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,11 @@
   box-sizing: border-box;
 }
 
+:focus-visible {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
 html {
   font-size: 16px;
   overflow-x: hidden !important;
