usuwanie bootstrapa WIP

--- a/src/components/Sections/HomePage/Testiniomals/Testiniomals.module.scss
+++ b/src/components/Sections/HomePage/Testiniomals/Testiniomals.module.scss
@@ -29,6 +29,11 @@
       .testimonial_stars {
         color: settings.$color-primary;
         padding-top: 20px;
+
+        svg {
+          width: 20px;
+          height: 20px;
+        }
       }
 
       .testimonial_text {
