--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -61,7 +61,8 @@
   src: url('/fonts/Montserrat-Black.woff2') format('woff2');
 }
 $color-primary: #ffbf00;
-$color-secondary: #191d28;
+// $color-secondary: #191d28;
+$color-secondary: #191919;
 
 $color-text-dark: #141414;
 $color-text-dark-light: #1b1b1b;
