--- a/src/components/Header/Headers/HeaderHome.module.scss
+++ b/src/components/Header/Headers/HeaderHome.module.scss
@@ -3,16 +3,50 @@
 .header {
   background-color: settings.$color-background-dark;
   position: relative;
-  height: 90vh;
-  background-image: image-set(url('/images/tlo.avif') type('image/avif'), url('/images/tlo.webp') type('image/webp'));
-
+  height: 95vh;
+  background-image: url('/images/hero_2.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 
+  &:before {
+    content: '';
+    position: absolute;
+    background-image: url('/images/text-hero.webp');
+    background-repeat: no-repeat;
+    background-position: center calc(75%);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+    opacity: 0.05; /* Ustawienie przezroczystości tła */
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 120px;
+    background-image: url('/images/shape2.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom center;
+    bottom: -10px;
+    left: 0;
+    z-index: 1;
+  }
+
+  .logo {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    z-index: 1;
+  }
+
   .content {
     position: absolute;
-    top: 45%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -64,6 +98,12 @@
 
 @media (max-width: 1000px) {
   .header {
+    background-image: url('/images/hero_2_mobile.webp');
+
+    .logo {
+      display: none;
+    }
+
     .content {
       .title {
         font-size: 2.5rem;
@@ -78,13 +118,20 @@
 
 @media (max-width: 880px) {
   .header {
-    background-image: image-set(
-      url('/images/tlo-mobile.avif') type('image/avif'),
-      url('/images/tlo-mobile.webp') type('image/webp')
-    );
-
+    background-image: url('/images/hero_2_mobile.webp');
     height: 600px;
+
+    &:before {
+      display: none;
+    }
+
+    .logo {
+      display: none;
+    }
+
     .content {
+      top: 50%;
+
       .title {
         font-size: 2rem;
       }
@@ -98,6 +145,9 @@
 
 @media (max-width: 650px) {
   .header {
+    .logo {
+      display: none;
+    }
     .content {
       width: auto;
       .title {
