--- a/src/components/Sections/HomePage/MyServiceComponents/MyServices/MyServices.module.scss
+++ b/src/components/Sections/HomePage/MyServiceComponents/MyServices/MyServices.module.scss
@@ -3,7 +3,8 @@
 .myServices {
   background-color: settings.$color-background-dark;
   margin: 150px 0 0;
-  padding: 100px 0 10px;
+  padding: 200px 0 10px;
+  position: relative;
 
   .info {
     display: flex;
