--- a/src/components/Sections/HomePage/MyServiceComponents/MyServicesAccordion/MyServicesAccordion.module.scss
+++ b/src/components/Sections/HomePage/MyServiceComponents/MyServicesAccordion/MyServicesAccordion.module.scss
@@ -20,9 +20,10 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 30px;
+      padding: 10px 20px;
       background-color: settings.$color-background-light;
       border-radius: 20px;
+
       border: none;
       cursor: pointer;
       transition: all 0.3s ease-in-out;
@@ -51,16 +52,19 @@
       }
 
       h3 {
-        font-size: 1.5rem;
+        font-size: 1.1rem;
+        text-transform: uppercase;
         color: settings.$color-text-dark;
         font-weight: settings.$font-weight-bold;
         margin: 0;
         text-align: start;
+        flex: 90%;
       }
 
       svg {
         width: 30px;
         height: 30px;
+        flex: 10%;
       }
     }
 
