--- a/src/components/Sections/HomePage/MyStack/MyStack.module.scss
+++ b/src/components/Sections/HomePage/MyStack/MyStack.module.scss
@@ -32,17 +32,18 @@
         border-radius: 20px;
         margin: 10px;
         transition: settings.$transition_0_3;
+        background-color: settings.$color-background-light;
 
         &:hover {
           transform: scale(1.07);
 
-          .card_title {
+          h3 {
             color: settings.$color-text-primary;
             transform: scale(1.1);
           }
         }
 
-        .card_title {
+        h3 {
           font-size: 1.5rem;
           font-weight: 700;
           color: settings.$color-text-dark;
@@ -64,7 +65,7 @@
       .stack .card {
         padding: 15px 20px;
 
-        .card_title {
+        h3 {
           font-size: 1.2rem;
         }
       }
