--- a/src/components/Sections/HomePage/WhyChooseMe/WhyChooseMe.module.scss
+++ b/src/components/Sections/HomePage/WhyChooseMe/WhyChooseMe.module.scss
@@ -3,7 +3,7 @@
 .site_info {
   .wrapper {
     display: flex;
-    margin-top: -80px;
+    margin-top: -110px;
     margin-bottom: 0;
     z-index: 1;
     position: relative;
@@ -30,6 +30,12 @@
       border-radius: 0 20px 20px 0;
       display: flex;
       flex-direction: column;
+
+      .card {
+        background-color: settings.$color-background-light;
+        border-radius: 20px;
+        padding: 1rem;
+      }
 
       .first_card {
         text-align: left;
