--- a/src/components/Sections/HomePage/Testiniomals/Testiniomals.module.scss
+++ b/src/components/Sections/HomePage/Testiniomals/Testiniomals.module.scss
@@ -29,6 +29,7 @@
       .testimonial_stars {
         color: settings.$color-primary;
         padding-top: 20px;
+        display: flex;
 
         svg {
           width: 20px;
