--- a/src/components/Ui/SectionTitle/SectionTitle.module.scss
+++ b/src/components/Ui/SectionTitle/SectionTitle.module.scss
@@ -62,10 +62,37 @@
   }
 }
 
+@media (max-width: 1120px) {
+  .section_title {
+    .background_text {
+      font-size: 10rem;
+      top: -150px;
+      left: -75px;
+      letter-spacing: normal;
+    }
+  }
+}
+
 @media (max-width: 768px) {
   .section_title {
+    .background_text {
+      font-size: 8rem;
+      top: -100px;
+      left: -50px;
+    }
+
     h2 {
       font-size: 2rem;
+    }
+  }
+}
+
+@media (max-width: 550px) {
+  .section_title {
+    .background_text {
+      font-size: 6.5rem;
+      top: -100px;
+      left: -25px;
     }
   }
 }
