--- a/src/components/Sections/HomePage/WhyChooseMe/WhyChooseMe.module.scss
+++ b/src/components/Sections/HomePage/WhyChooseMe/WhyChooseMe.module.scss
@@ -7,6 +7,8 @@
     margin-bottom: 0;
     z-index: 1;
     position: relative;
+    border-radius: 20px;
+    box-shadow: settings.$box-shadow;
 
     .first_column {
       flex: 1;
@@ -67,13 +69,14 @@
     padding: 2rem;
     border-radius: 20px;
     display: flex;
+    box-shadow: settings.$box-shadow;
   }
 }
 
 @media (max-width: 1920px) {
   .site_info {
     .wrapper {
-      margin-top: -50px;
+      margin-top: -100px;
     }
   }
 }
