--- a/src/components/Sections/Shared/ArticleCard/ArticleCard.module.scss
+++ b/src/components/Sections/Shared/ArticleCard/ArticleCard.module.scss
@@ -1,7 +1,36 @@
+@use '../../../../styles/settings.scss' as settings;
+
 .card {
-  flex: 30%;
   max-width: 400px;
-  margin: 20px;
+  border: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+
+  .card_body {
+    padding: 16px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    background-color: settings.$color-background-light;
+
+    h3 {
+      font-size: 1.5rem;
+      margin: 0 0 8px;
+    }
+
+    p {
+      font-size: 1rem;
+      margin: 0 0 20px;
+    }
+
+    button {
+      margin-top: auto;
+
+      &:hover {
+        color: settings.$color-text-primary;
+      }
+    }
+  }
 }
 
 @media (max-width: 992px) {
