--- a/src/components/Sections/Shared/CallToAction/CallToAction.module.scss
+++ b/src/components/Sections/Shared/CallToAction/CallToAction.module.scss
@@ -9,6 +9,7 @@
   padding: 50px;
   position: relative;
   z-index: 2;
+  box-shadow: settings.$box-shadow;
 
   &::before {
     content: '';
@@ -82,6 +83,10 @@
 
 .action2 {
   background-color: settings.$color-background-dark;
+  background-image: url('/images/baner-01.webp');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   padding: 80px 0;
   position: relative;
 
@@ -134,5 +139,9 @@
         }
       }
     }
+  }
+
+  .action2 {
+    background-image: url('/images/baner_mobile.webp');
   }
 }
