--- a/src/components/Sections/Contact/ContactInfo/ContactInfo.module.scss
+++ b/src/components/Sections/Contact/ContactInfo/ContactInfo.module.scss
@@ -16,7 +16,10 @@
       height: 100%;
 
       .address {
-        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
 
         svg {
           font-size: 45px;
