--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,6 +15,28 @@
 html {
   font-size: 16px;
   overflow-x: hidden !important;
+
+  label {
+    font-size: 0.8rem;
+    margin-bottom: 1px;
+  }
+
+  input,
+  textarea {
+    background-color: settings.$color-background-light;
+    border: 1px solid settings.$color-background-light;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 1rem;
+    color: settings.$color-text-dark;
+    transition: all 0.3s ease-in-out;
+
+    &:focus {
+      outline: none;
+      border: 1px solid settings.$color-text-light;
+      background-color: settings.$color-background-light;
+    }
+  }
 }
 
 body {
@@ -50,6 +72,15 @@ em {
     height: 5px;
     background-color: settings.$color-primary;
   }
+}
+
+.no_button a {
+  color: inherit;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  padding: 0;
+  text-decoration: none;
 }
 
 @media (max-width: 768px) {
